Removed Android section;